# Sentinel

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  errors.txt  index.html
.github/workflows/: deploy-pages.yml
examples/: reproduce_loop.md
scripts/: benchmark.py  demo_pitch.py  test_sentinel.py
src/: main.rs  scorer.rs
www/: dashboard.html  index.html
