[package]
name = "pryect"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
